crates/ui/src/screens/battle/snapshots/trpg_ui__screens__battle__attack_tests__playback_mid_strike_snapshot.snap
---
source: crates/ui/src/screens/battle/attack_tests.rs
expression: h.snapshot()
---
                                                                      ┌────────────────────────────┐
             ╔══════════════════════════════════════════╗             │ Plain                      │
             ║ Test Lord             Brigand            ║             │ DEF +0  AVO +0             │
             ║ HP 19 ██████████      HP 17 █████████░   ║             │                            │
             ║                       HIT -8             ║             │                            │
             ╚══════════════════════════════════════════╝             │ Brigand                    │
                                                                      │ Brigand  Lv 1              │
                                                                      │ HP 17/20   █████████░      │
                                                                      │ Enemy                      │
                                                                      │                            │
                                                                      │                            │
                    ≈≈≈≈≈≈≈≈≈≈....♣♣♣♣♠♠♠♠^^^^▲▲                      │                            │
                    ≈≈≈≈≈≈≈≈....··Ra··♣♣♣♣^^^^^^                      │                            │
                    ≈≈≈≈≈≈====····LoBr..♣♣♣♣....                      │                            │
                    ..≈≈≈≈..··..............╦╦..                      │                            │
                    ....······....BrAr▓▓▓▓▓▓▓▓..                      │                            │
                    ..♣♣··....╦╦......▓▓░░╦╦▓▓..                      │                            │
                    ♣♣♣♣··MaKn........▓▓░░░░▓▓..                      │                            │
                    ♣♣♠♠··..........Fr▓▓▓▓▐▌▓▓..                      │                            │
                                                                      │                            │
                                                                      │                            │
                                                                      │                            │
                                                                      │                            │
                                                                      │                            │
                                                                      │                            │
                                                                      │                            │
                                                                      │                            │
                                                                      │                            │
                                                                      │                            │
                                                                      └────────────────────────────┘
                                                     w danger zone: OFF · Shift+Space auto-end: OFF 
 d skip · hold f fast                                                                      F2 debug 
--- colours ---
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
aaaaaaaaaaaaaccccccccccccccccccccccccccccccccccccccccccccaaaaaaaaaaaaabdeeeeeddddddddddddddddddddddb
aaaaaaaaaaaaacdfffffffffdddddddddddddgggggggddddddddddddcaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaacdddddddhhhhhhhhhhddddddddddddhhhhhhhhhidddcaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaacdddddddddddddddddddddddeeeeeedddddddddddddcaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaccccccccccccccccccccccccccccccccccccccccccccaaaaaaaaaaaaabdgggggggddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddhhhhhhhhhiddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabdiiiiiddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaajjjjjjkkkkllllmmmmnnnnooooppaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaajjjjkkkkllllqqrrqqmmmmooooooaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaajjkkkkssssqqqqttuullmmmmllllaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaallkkkkllqqllllllllllllllvvllaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaallllqqqqqqlllluuwwxxxxxxxxllaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaallmmqqllllvvllllllxxyyvvxxllaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaammmmqqwwwwllllllllxxyyyyxxllaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaammnnqqlllllllllluuxxxxzzxxllaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabddddddddddddddddddddddddddddb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAa
aAAAAAAAAAAAAAAAAAAAAaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaAAAAAAAAa
--- legend ---
a = fg:text bg:black
b = fg:panel_border bg:panel_bg
c = fg:panel_border_focus bg:panel_bg
d = fg:text bg:panel_bg
e = fg:text_highlight bg:panel_bg
f = fg:player bg:panel_bg
g = fg:enemy bg:panel_bg
h = fg:hp_high bg:panel_bg
i = fg:text_dim bg:panel_bg
j = fg:water bg:sea
k = fg:water bg:water_bg
l = fg:grass bg:grass_bg
m = fg:forest bg:forest_bg
n = fg:thicket bg:thicket_bg
o = fg:mountain bg:mountain_bg
p = fg:peak bg:peak_bg
q = fg:road bg:road_bg
r = fg:enemy bg:road_bg
s = fg:wood bg:water_bg
t = fg:player bg:road_bg
u = fg:enemy bg:grass_bg
v = fg:fort bg:fort_bg
w = fg:player bg:grass_bg
x = fg:stone bg:stone_bg
y = fg:floor bg:floor_bg
z = fg:wood bg:stone_bg
A = fg:text_dim bg:black
--- overlays ---
over  273,222 14x2  hp_high
over  225,286 14x2  hp_high
over  289,254 14x2  hp_high
over  289,222 12x2  hp_high
over  301,222 2x2  black
over  273,254 14x2  hp_high
over  273,206 14x2  hp_high
over  289,302 14x2  hp_high
over  209,286 14x2  hp_high
